[gd_scene load_steps=79 format=3 uid="uid://b1xr6ko6ds6u2"]

[ext_resource type="Script" uid="uid://dx000fsdiaax8" path="res://Assets/Scripts/player.gd" id="1_23lac"]
[ext_resource type="Texture2D" uid="uid://c8ycufpydpfh5" path="res://Assets/Sprites/with_outline/ATTACK 1.png" id="1_t1xgp"]
[ext_resource type="Texture2D" uid="uid://bsw0auyelicxb" path="res://Assets/Sprites/with_outline/IDLE.png" id="2_23lac"]
[ext_resource type="Texture2D" uid="uid://d2p1dw0vvg4r2" path="res://Assets/Sprites/with_outline/ATTACK 3.png" id="2_o8kuu"]
[ext_resource type="Texture2D" uid="uid://b31c677bwiypg" path="res://Assets/Sprites/with_outline/HURT.png" id="3_ecf78"]
[ext_resource type="Texture2D" uid="uid://drhc1p0f2dgup" path="res://Assets/Sprites/with_outline/DEATH.png" id="3_vy5gb"]
[ext_resource type="Texture2D" uid="uid://i2wt4nnyjyb2" path="res://Assets/Sprites/with_outline/RUN.png" id="3_w3t24"]
[ext_resource type="Texture2D" uid="uid://b5olb5ofk70ps" path="res://Assets/Sprites/with_outline/WALK.png" id="4_c3tg1"]
[ext_resource type="Texture2D" uid="uid://d8p18rlc4vlk" path="res://Assets/Sprites/with_outline/JUMP.png" id="4_lerqx"]
[ext_resource type="Texture2D" uid="uid://tjlktjswm5nq" path="res://Assets/Sprites/with_outline/ATTACK 2.png" id="4_xv74q"]
[ext_resource type="Script" uid="uid://4dwxrj44rkt1" path="res://Assets/Scripts/attack.gd" id="6_w3t24"]
[ext_resource type="Script" uid="uid://ngpu7vytpigl" path="res://Assets/Scripts/hitBox.gd" id="8_lerqx"]
[ext_resource type="Script" uid="uid://b1e1sf5m072ei" path="res://Assets/Scripts/hurtBox.gd" id="9_jp3cw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_o8kuu"]
height = 38.0

[sub_resource type="AtlasTexture" id="AtlasTexture_52fvq"]
atlas = ExtResource("2_o8kuu")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_nymsj"]
atlas = ExtResource("2_o8kuu")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_yay7c"]
atlas = ExtResource("2_o8kuu")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_1gme6"]
atlas = ExtResource("2_o8kuu")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_tlww8"]
atlas = ExtResource("2_o8kuu")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_t800y"]
atlas = ExtResource("2_o8kuu")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_w3t24"]
atlas = ExtResource("1_t1xgp")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3tg1"]
atlas = ExtResource("1_t1xgp")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_lerqx"]
atlas = ExtResource("1_t1xgp")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_jp3cw"]
atlas = ExtResource("1_t1xgp")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_ecf78"]
atlas = ExtResource("1_t1xgp")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy5gb"]
atlas = ExtResource("1_t1xgp")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_f26q8"]
atlas = ExtResource("4_xv74q")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_gwiul"]
atlas = ExtResource("4_xv74q")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_234v5"]
atlas = ExtResource("4_xv74q")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_liu7e"]
atlas = ExtResource("4_xv74q")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvgd6"]
atlas = ExtResource("4_xv74q")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_icc0i"]
atlas = ExtResource("3_vy5gb")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1o4b"]
atlas = ExtResource("3_vy5gb")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_irxcm"]
atlas = ExtResource("3_vy5gb")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_bcaw2"]
atlas = ExtResource("3_vy5gb")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_23c4v"]
atlas = ExtResource("3_vy5gb")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_smmal"]
atlas = ExtResource("3_vy5gb")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_yh2vs"]
atlas = ExtResource("3_vy5gb")
region = Rect2(576, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtryy"]
atlas = ExtResource("3_vy5gb")
region = Rect2(672, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmr2b"]
atlas = ExtResource("3_vy5gb")
region = Rect2(768, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_4i0g1"]
atlas = ExtResource("3_vy5gb")
region = Rect2(864, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukllu"]
atlas = ExtResource("3_vy5gb")
region = Rect2(960, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_mkm62"]
atlas = ExtResource("3_vy5gb")
region = Rect2(1056, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5ifs"]
atlas = ExtResource("3_ecf78")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk7rj"]
atlas = ExtResource("3_ecf78")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0qrj"]
atlas = ExtResource("3_ecf78")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxlt4"]
atlas = ExtResource("3_ecf78")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_xv74q"]
atlas = ExtResource("2_23lac")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qq7w"]
atlas = ExtResource("2_23lac")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcr7l"]
atlas = ExtResource("2_23lac")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrbh7"]
atlas = ExtResource("2_23lac")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_aq5fl"]
atlas = ExtResource("2_23lac")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_xka8r"]
atlas = ExtResource("2_23lac")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_ncqey"]
atlas = ExtResource("2_23lac")
region = Rect2(576, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsrmw"]
atlas = ExtResource("4_lerqx")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_o8kuu"]
atlas = ExtResource("4_lerqx")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjh5i"]
atlas = ExtResource("4_lerqx")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx0dr"]
atlas = ExtResource("4_lerqx")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgkdp"]
atlas = ExtResource("4_lerqx")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnw5g"]
atlas = ExtResource("3_w3t24")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsi02"]
atlas = ExtResource("3_w3t24")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_eprmk"]
atlas = ExtResource("3_w3t24")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytees"]
atlas = ExtResource("3_w3t24")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqho8"]
atlas = ExtResource("3_w3t24")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_5lpyi"]
atlas = ExtResource("3_w3t24")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_fupf5"]
atlas = ExtResource("3_w3t24")
region = Rect2(576, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6hru"]
atlas = ExtResource("3_w3t24")
region = Rect2(672, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggw7w"]
atlas = ExtResource("4_c3tg1")
region = Rect2(0, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_35grl"]
atlas = ExtResource("4_c3tg1")
region = Rect2(96, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8jh0"]
atlas = ExtResource("4_c3tg1")
region = Rect2(192, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_5jjye"]
atlas = ExtResource("4_c3tg1")
region = Rect2(288, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_b5624"]
atlas = ExtResource("4_c3tg1")
region = Rect2(384, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_w34vp"]
atlas = ExtResource("4_c3tg1")
region = Rect2(480, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_7578i"]
atlas = ExtResource("4_c3tg1")
region = Rect2(576, 0, 96, 84)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdvb1"]
atlas = ExtResource("4_c3tg1")
region = Rect2(672, 0, 96, 84)

[sub_resource type="SpriteFrames" id="SpriteFrames_vjh5i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_52fvq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nymsj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yay7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1gme6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlww8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t800y")
}],
"loop": true,
"name": &"aoe",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w3t24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3tg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lerqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jp3cw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ecf78")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy5gb")
}],
"loop": false,
"name": &"attack_basic",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f26q8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gwiul")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_234v5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_liu7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvgd6")
}],
"loop": true,
"name": &"dash",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_icc0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1o4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irxcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bcaw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23c4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smmal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yh2vs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtryy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmr2b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4i0g1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukllu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mkm62")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5ifs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk7rj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0qrj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxlt4")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xv74q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qq7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcr7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrbh7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aq5fl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xka8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ncqey")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsrmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o8kuu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjh5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx0dr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgkdp")
}],
"loop": false,
"name": &"jump",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnw5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsi02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eprmk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytees")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqho8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5lpyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fupf5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6hru")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggw7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35grl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8jh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5jjye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b5624")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w34vp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7578i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdvb1")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_jp3cw"]
radius = 15.0
height = 46.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tx0dr"]
size = Vector2(12, 32.5)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 129
script = ExtResource("1_23lac")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true

[node name="hitBox" type="Area2D" parent="Camera2D"]
script = ExtResource("8_lerqx")
metadata/_custom_type_script = "uid://ngpu7vytpigl"

[node name="strikeShape" type="CollisionShape2D" parent="Camera2D/hitBox"]
position = Vector2(13, -4)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_o8kuu")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("player_controller")]
sprite_frames = SubResource("SpriteFrames_vjh5i")
animation = &"dash"
frame_progress = 0.79462177
script = ExtResource("6_w3t24")
player_controller = NodePath("..")

[node name="hitBox" type="Area2D" parent="AnimatedSprite2D"]
script = ExtResource("8_lerqx")
metadata/_custom_type_script = "uid://ngpu7vytpigl"

[node name="strikeCollisionShape" type="CollisionShape2D" parent="AnimatedSprite2D/hitBox"]
position = Vector2(11, 3)
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_jp3cw")

[node name="hurtBox" type="Area2D" parent="AnimatedSprite2D" groups=["player"]]
script = ExtResource("9_jp3cw")
metadata/_custom_type_script = "uid://b1e1sf5m072ei"

[node name="hurtCollisionShape" type="CollisionShape2D" parent="AnimatedSprite2D/hurtBox"]
position = Vector2(0, 2.75)
shape = SubResource("RectangleShape2D_tx0dr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2.75)
shape = SubResource("RectangleShape2D_tx0dr")

[connection signal="animation_finished" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2D" to="AnimatedSprite2D" method="_on_frame_changed"]
